// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) informational-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) informational-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) informational-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) informational-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-error-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E6ACA9",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#330B09",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-error-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E6ACA9",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#330B09",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-error-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E6ACA9",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#330B09",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-error-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E6ACA9",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#330B09",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-info-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-info-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-info-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-info-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#DEE0E6",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#2D2F33",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-success-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-success-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-success-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-success-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E0E0E0",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#424242",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-warning-m-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E4F3F1",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#013332",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-warning-m-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E4F3F1",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 8,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#013332",
          "fontFamily": "Inter-Regular",
          "fontSize": 12,
          "fontWeight": "400",
          "lineHeight": 16,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-warning-s-default-dark 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E4F3F1",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#013332",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix baseline (variant x size x {default,disabled} x modes) status-warning-s-default-light 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "#E4F3F1",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#013332",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;

exports[`Label — snapshot matrix non-Latin font-fallback canary (canaryVariant x size=default x default x light x lang) informational-s-default-light-fa 1`] = `
<View
  collapsable={false}
  pointerEvents="box-none"
  style={
    {
      "flex": 1,
    }
  }
>
  <View
    accessibilityLabel="Beta"
    accessibilityRole="text"
    style={
      [
        {
          "alignItems": "center",
          "alignSelf": "flex-start",
          "backgroundColor": "rgba(51, 51, 51, 0.02)",
          "borderRadius": 4,
          "flexDirection": "row",
          "gap": 2,
          "paddingHorizontal": 4,
          "paddingVertical": 2,
        },
        undefined,
      ]
    }
    testID="ui-label"
  >
    <Text
      style={
        {
          "color": "#333333",
          "fontFamily": "Inter-Regular",
          "fontSize": 11,
          "fontWeight": "400",
          "lineHeight": 14,
        }
      }
    >
      Beta
    </Text>
  </View>
</View>
`;
